2006-07-11  Gary Benson  <gbenson@redhat.com>

	* configure.in: Reinstated SRCDIR.
	* configure: Regenerated.

2006-07-11  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/image/BufferedImage/constructors.java: New file.

2006-07-10  Matt Wringe  <mwringe@redhat.com>

	* gnu/testlet/java/security/Engine/getInstance.java
	(testAlgorithmCase): New Test. Tests algorithm name case insensitivity.

2006-07-10  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/AbstractButton/setHorizontalTextPosition.java: New file,
	* gnu/testlet/javax/swing/AbstractButton/setVerticalTextPosition.java: New file,
	* gnu/testlet/javax/swing/Timer/setDelay.java: New file,
	* gnu/testlet/javax/swing/Timer/setInitialDelay.java: New file,
	* gnu/testlet/javax/swing/ToolTipManager/setDismissDelay.java: New file,
	* gnu/testlet/javax/swing/ToolTipManager/setInitialDelay.java: New file,
	* gnu/testlet/javax/swing/ToolTipManager/setReshowDelay.java: New file.
	
2006-07-07  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/testName.java: New test.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/AbstractButton/setHorizontalAlignment.java: New test,
	* gnu/testlet/javax/swing/AbstractButton/setVerticalAlignment.java: New test.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/AbstractButton/setRolloverIcon.java: New test,
	* gnu/testlet/javax/swing/AbstractButton/setRolloverSelectedIcon.java: Likewise.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicArrowButton/getMaximumSize.java
	(test): Check modification of return value,
	* gnu/testlet/javax/swing/plaf/basic/BasicArrowButton/getMinimumSize.java
	(test): Likewise,
	* gnu/testlet/javax/swing/plaf/basic/BasicArrowButton/getPreferredSize.java
	(test): Likewise.

2006-07-07  Roman Kennke  <kennke@aicas.com>
